replacing ReactDOM with CreateRoot & fixing overflow-y for smaller screens & fixing the display of pointy finger for smaller screens

--- a/src/components/MainHeader/MainHeader.module.css
+++ b/src/components/MainHeader/MainHeader.module.css
@@ -13,4 +13,17 @@
 
 .main-header h1 {
     color: white;
+    font-size: 1rem;
+}
+
+@media (min-width: 350px){
+    .main-header h1{
+        font-size: 1.2rem;
+    }
+}
+
+@media (min-width: 550px){
+    .main-header h1{
+        font-size: 2rem;
+    }
 }
