--- a/src/index.css
+++ b/src/index.css
@@ -23,3 +23,9 @@ body {
 main {
     margin-top: 10rem;
 }
+
+@media (max-width: 1000px){
+    body{
+        overflow-y: auto;
+    }
+}
